--- a/index.html
+++ b/index.html
@@ -206,5 +206,6 @@
     </div>
   </form>
   <script type="text/javascript" src="js/slate.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
