--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="item-container">
-      <div class="item-container-header">Date, Time, Colorpickers</div>
+      <div class="item-container-header">Customize Colors</div>
       <div class="item-container-content">
         <label class="item">
           Background Color
@@ -41,6 +41,12 @@
         </label>           
       </div>
     </div>
+
+    <div class="item-container">
+      <div class="button-container">
+        <input type="button" class="item-button" value="SEND" id="send">
+      </div>
+    </div>    
 
   <script type="text/javascript" src="js/slate.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
