--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="item-container-content">
         <label class="item">
           Background Color
-          <input type="text" class="item-color item-color-normal" name="color-1" value="0xFFFFFF">
+          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0xFFFFFF">
         </label>
         <label class="item">
           Time (HH:MM) Color
