--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport">
   <title></title>
   <link rel="stylesheet" href="css/slate.css">
+  <script type="text/javascript" src="js/slate.js"></script>
 </head>
 <body>
   <form id="main-form">
@@ -44,11 +45,10 @@
 
     <div class="item-container">
       <div class="button-container">
-        <input type="button" class="item-button" value="SEND" id="send">
+        <input type="button" class="item-button" value="APPLY" id="send">
       </div>
     </div>    
 
-  <script type="text/javascript" src="js/slate.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
