--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <title></title>
   <link rel="stylesheet" href="css/slate.css">
   <script type="text/javascript" src="js/slate.js"></script>
+  <style>
+    h2 {
+      padding: 15px 10px 0 10px;
+    }
+  </style>
 </head>
 <body>
   <form id="main-form">
-    <div class="item-container">
-      <div class="item-container-content">
-        <div class="item">
-          <strong>Classy Colors Configuration Page</strong>
-        </div>
-      </div>
-    </div>
+    
+    <h2>Classy Colors Configuration</h2>
 
     <div class="item-container">
       <div class="item-container-header">Customize Colors</div>
