Add cancel button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     h2 {
       padding: 15px 10px 0 10px;
     }
+    #cancel {
+      margin-right: 20px;
+    }
   </style>
 </head>
 <body>
@@ -45,6 +48,7 @@
 
     <div class="item-container">
       <div class="button-container">
+        <a href="" id="cancel">Cancel</a>
         <input type="button" class="item-button" value="APPLY" id="send">
       </div>
     </div>    
