--- a/index.html
+++ b/index.html
@@ -25,24 +25,12 @@
       <div class="item-container-content">
         <label class="item">
           Background Color
-          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0xFFFFFF">
+          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0x00AAFF">
         </label>
         <label class="item">
           Time (HH:MM) Color
-          <input type="text" class="item-color item-color-normal" name="color-2" value="0xFFFFFF">
-        </label>   
-        <label class="item">
-          Day of the Week Color
-          <input type="text" class="item-color item-color-normal" name="color-3" value="0xFFFFFF">
-        </label> 
-        <label class="item">
-          Date Color
-          <input type="text" class="item-color item-color-normal" name="color-4" value="0xFFFFFF">
-        </label>
-        <label class="item">
-          AM/PM Color
-          <input type="text" class="item-color item-color-normal" name="color-5" value="0xFFFFFF">
-        </label>           
+          <input type="text" class="item-color item-color-normal" name="color-2" id="timeColorPicker" value="0xFF0055">
+        </label>            
       </div>
     </div>
 
