Add bluetooth checkbox

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
     </div>
 
     <div class="item-container">
+      <div class="item-container-header">Other Options</div>
+      <div class="item-container-content">
+        <label class="item">
+          Bluetooth Icon Enabled
+          <input type="checkbox" class="item-toggle" name="toggle-1" id="bluetoothEnabledCheckBox" checked>
+        </label>
+    </div>
+
+    <div class="item-container">
       <div class="button-container">
         <a href="" id="cancel">Cancel</a>
         <input type="button" class="item-button" value="APPLY" id="send">
