Add secondary color picker

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <label class="item">
           Time (HH:MM) Color
           <input type="text" class="item-color item-color-normal" name="color-2" id="timeColorPicker" value="0xFF0055">
-        </label>            
+        </label>
+        <label class="item">
+          Secondary Color
+          <div class="item-subtitle">This affects the day, date, AM/PM, and Bluetooth icon.</div>
+          <input type="text" class="item-color item-color-normal" name="color-2" id="secondaryColorPicker" value="0xFFFFFF">
+        </label>             
       </div>
     </div>
 
