--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <div class="item-container-content">
         <label class="item">
           Background Color
-          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0x00AAFF">
+          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0x0055AA">
         </label>
         <label class="item">
           Time (HH:MM) Color
-          <input type="text" class="item-color item-color-normal" name="color-2" id="timeColorPicker" value="0xFF0055">
+          <input type="text" class="item-color item-color-normal" name="color-2" id="timeColorPicker" value="0x000000">
         </label>
         <label class="item">
           Secondary Color
