--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="item-container-content">
         <label class="item">
           Background Color
-          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0x0055AA">
+          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0x0055FF">
         </label>
         <label class="item">
           Time (HH:MM) Color
