--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
       <div class="item-container-content">
         <label class="item">
           Background Color
-          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0x0055FF">
+          <input type="text" class="item-color item-color-normal" name="color-1" id="bgColorPicker" value="0x000000">
         </label>
         <label class="item">
           Time (HH:MM) Color
-          <input type="text" class="item-color item-color-normal" name="color-2" id="timeColorPicker" value="0x000000">
+          <input type="text" class="item-color item-color-normal" name="color-2" id="timeColorPicker" value="0xFFFFFF">
         </label>
         <label class="item">
           Secondary Color
           <div class="item-subtitle">This affects the day, date, AM/PM, and Bluetooth icon.</div>
-          <input type="text" class="item-color item-color-normal" name="color-3" id="secondaryColorPicker" value="0xFFFFFF">
+          <input type="text" class="item-color item-color-normal" name="color-3" id="secondaryColorPicker" value="0x00AAFF">
         </label>             
       </div>
     </div>
